k8s-on-premise-cloud/PNGStack/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.nhatanhmovieweb.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: prometheus-grafana
                port: 
                  number: 80
